crates/heyfood-tui/src/snapshots/heyfood_tui__render__tests__startup_120.snap
---
source: crates/heyfood-tui/src/render.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ~                                                                                                                    │
│                                                                                                                      │
│                                     ▄                      ▄▄▄                 ▄                                     │
│                                     █      ▄▄▄  ▄   ▄    ▄█▄▄   ▄▄▄   ▄▄▄   ▄▄▄█                                     │
│                                     █▀▀▀▄ █▄▄▄█ █   █     █    █   █ █   █ █   █                                     │
│                                     █   █ ▀▄▄▄  ▀▄▄▄█ ██  █    ▀▄▄▄▀ ▀▄▄▄▀ ▀▄▄▄█                                     │
│                                                  ▄▄▄▀                                                                │
│                                                                                                                      │
│                                    New question                 enter                                                │
│                                    New line               shift+enter                                                │
│                                    Scroll history           pgup/pgdn                                                │
│                                    Quit                        ctrl+d                                                │
│                                                                                                                      │
│                                    heyfood 0.9.0 is here!                                                            │
│                                    Ask about food, meals, restaurants, or recipes.                                   │
│                                                                                                                      │
│                                                                                                                      │
│  / commands · Tab complete · Shift+Enter newline · Ctrl+C stop · Ctrl+D exit                                         │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │› Ask about food, a meal, a restaurant, or a recipe…                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────── hey.food (ready) ╯ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
                                                                                                heyfood  0.9.0 [stable]
