crates/heyfood-tui/src/snapshots/heyfood_tui__render__tests__startup_40.snap
---
source: crates/heyfood-tui/src/render.rs
expression: rendered
---
╭──────────────────────────────────────╮
│ ~                                    │
│                                      │
│                                      │
│                                      │
│                                      │
│ New question                 enter   │
│ New line               shift+enter   │
│ Scroll history           pgup/pgdn   │
│ Quit                        ctrl+d   │
│                                      │
│ heyfood 0.9.0 is here!               │
│ Ask about food and meals.            │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│  / commands · ? help · ^C stop · ^D  │
│ ╭──────────────────────────────────╮ │
│ │› Ask about food, a meal, a       │ │
│ ╰──────────────── hey.food (ready) ╯ │
╰──────────────────────────────────────╯
                heyfood  0.9.0 [stable]
