crates/heyfood-tui/src/snapshots/heyfood_tui__render__tests__streaming_120.snap
---
source: crates/heyfood-tui/src/render.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ~                                                                                                                    │
│ You                                                                                                                  │
│ Pad thai for lunch                                                                                                   │
│                                                                                                                      │
│ hey.food                                                                                                             │
│ …                                                                                                                    │
│                                                                                                                      │
│ Responding…                                                                                                          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│  / commands · Tab complete · Shift+Enter newline · Ctrl+C stop · Ctrl+D exit                                         │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │› Can you suggest another option?                                                                                 │ │
│ ╰────────────────────────────────────────────────────────────────────────────────────────────── hey.food (working) ╯ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
                                                                                                heyfood  0.7.1 [stable]
