crates/heyfood-tui/src/snapshots/heyfood_tui__render__tests__streaming_40.snap
---
source: crates/heyfood-tui/src/render.rs
expression: rendered
---
╭──────────────────────────────────────╮
│ ~                                    │
│ You                                  │
│ Pad thai for lunch                   │
│                                      │
│ hey.food                             │
│ …                                    │
│                                      │
│ Responding…                          │
│                                      │
│                                      │
│  / commands · ? help · ^C stop · ^D  │
│ ╭──────────────────────────────────╮ │
│ │› Can you suggest another option? │ │
│ │                                  │ │
│ ╰────────────── hey.food (working) ╯ │
╰──────────────────────────────────────╯
                heyfood  0.9.0 [stable]
