crates/heyfood-tui/src/snapshots/heyfood_tui__render__tests__streaming_80.snap
---
source: crates/heyfood-tui/src/render.rs
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ ~                                                                            │
│ You                                                                          │
│ Pad thai for lunch                                                           │
│                                                                              │
│ hey.food                                                                     │
│ …                                                                            │
│                                                                              │
│ Responding…                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│  / commands · Enter send · Ctrl+C stop · End follow                          │
│ ╭──────────────────────────────────────────────────────────────────────────╮ │
│ │› Can you suggest another option?                                         │ │
│ ╰────────────────────────────────────────────────────── hey.food (working) ╯ │
╰──────────────────────────────────────────────────────────────────────────────╯
                                                        heyfood  0.9.0 [stable]
